--- a/public/contact.html
+++ b/public/contact.html
@@ -55,7 +55,7 @@
             <article class="letter">
                 <form method="POST" action="https://sheetdb.io/api/v1/5glnhoicmz34w" id="sheetdb-form">
                 <div class="side">
-                    <h1>Формуляр</h1>
+                    <h1 style="color: black;">Формуляр</h1>
                     <p>
                         <textarea placeholder="Вашето съобщение" name="data[message]" required></textarea>
                     </p>
