--- a/public/artifacts.html
+++ b/public/artifacts.html
@@ -42,8 +42,8 @@
         <div class="artifact" id="artifacts"></div>  
         <div id="mantas"></div>
         <script class="bot" async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
-            <main-footer style="position: fixed;left: 0;
-            bottom: 0;
+            <main-footer style="position: absolute;
+           top: 27cm;
             width: 100%;
             text-align: center;"></main-footer>  
         <script src="artifacts.js"></script>
