aboutus artifacts header bug

--- a/public/contact.html
+++ b/public/contact.html
@@ -12,8 +12,7 @@
 <body>
 
 <header>
-    <menu-nav></menu-nav>
-    <h1 style="color:white">Контакти</h1>
+    Контакти
 </header>
 <div class="navigation">
     <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
