--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-<header  style="font-size: 25px;">За нас</header>
+<header  id="header">За нас</header>
   <div class="navigation">
     <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
     <label for="nav-toggle" class="navigation__button" style="--button_color:#1d1d1b">
