--- a/public/contact.html
+++ b/public/contact.html
@@ -24,20 +24,20 @@
     <nav class="navigation__nav" role="navigation">
       <ul class="navigation__list navigation_backeffect">
         <li class="navigation__item">
-          <a target="_blank" data-text="Начална страница" href="index.html" class="navigation__link">Начална страница</a>
-        </li>
-        <li class="navigation__item">
-          <a target="_blank" data-text="Артефакти" href="artifacts.html" class="navigation__link">Артефакти</a>
-        </li>
-        <li class="navigation__item">
-          <a target="_blank" data-text="Линия на времето" href="timeline.html" class="navigation__link">Линия на времето</a>
-        </li>
-        <li class="navigation__item">
-          <a target="_blank" data-text="За Нас" href="aboutus.html" class="navigation__link">За Нас</a>
-        </li>
-        <li class="navigation__item">
-          <a target="_blank" data-text="Контакти" href="contact.html" class="navigation__link">Контакти</a>
-        </li>
+            <a data-text="Начална страница" href="index.html" class="navigation__link">Начална страница</a>
+          </li>
+          <li class="navigation__item">
+            <a data-text="Артефакти" href="artifacts.html" class="navigation__link">Артефакти</a>
+          </li>
+          <li class="navigation__item">
+            <a data-text="Линия на времето" href="timeline.html" class="navigation__link">Линия на времето</a>
+          </li>
+          <li class="navigation__item">
+            <a data-text="За Нас" href="aboutus.html" class="navigation__link">За Нас</a>
+          </li>
+          <li class="navigation__item">
+            <a data-text="Контакти" href="contact.html" class="navigation__link">Контакти</a>
+          </li>
   </ul>
 </nav>
 </div>
