--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,6 @@
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 </head>
-<body>
   <div class="navigation">
     <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
     <label for="nav-toggle" class="navigation__button">
@@ -88,9 +87,9 @@
   </div>
     </section>
     
-    <section class="page face top" id="varna">
-      <div class="act-table text-center">
-        <div class="act-table-cell ver-middle" id="varna_page">
+    <section class="page face top" id="varna" style="z-index: 989;">
+      <div class="act-table text-center" style="z-index: 999;">
+        <div class="act-table-cell ver-middle" id="varna_page" style="z-index: 9999;">
           <main-footer></main-footer>
         </div>
       </div>
@@ -124,5 +123,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="script.js"></script>
   <script src="index.js"></script>
-</body>
 </html>
