--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,12 @@
     <section class="page active face front" id="ancient_tooth">
       <div class="act-table text-center">
         <div class="act-table-cell ver-middle" id="ancient_tooth_page">
+          <div class="figure_div">
+            <figure>
+                <img src="https://assets.codepen.io/1480814/necro.png" alt="Necromancer">
+                <figcaption>The Necro</figcaption>
+            </figure>
+            </div>
           <main-footer></main-footer>
         </div>
       </div>
