--- a/public/index.html
+++ b/public/index.html
@@ -66,13 +66,15 @@
     <!--Article-->
     <section class="page active face front" id="ancient_tooth">
       <div class="act-table text-center">
-        <div class="act-table-cell ver-middle" id="ancient_tooth_page">
-          <div class="figure_div">
-            <figure>
-                <img src="https://assets.codepen.io/1480814/necro.png" alt="Necromancer">
-                <figcaption>The Necro</figcaption>
-            </figure>
+        <div class="act-table-cell ver-middle">
+          <div class="jumbotron" id="ancient_tooth_jumbotron">
+          </div>
+          <main class="main">
+            <div class="container">
+              <div class="row" id="ancient_tooth_row">
+              </div>
             </div>
+          </main>
           <main-footer></main-footer>
         </div>
       </div>
@@ -80,10 +82,15 @@
     <!--Article-->
     <section class="page face back" id="caves">
       <div class="act-table text-center">
-        <div class="act-table-cell ver-middle" id="caves_page">
-          
-        <div class="first-images">
-      </div>
+        <div class="act-table-cell ver-middle">
+          <div class="jumbotron" id="caves_jumbotron">
+        </div>
+        <main class="main">
+          <div class="container">
+            <div class="row" id="caves_row">
+            </div>
+          </div>
+        </main>
       <main-footer></main-footer>
     </div>
   </div>
@@ -91,7 +98,15 @@
     
     <section class="page face top" id="varna">
       <div class="act-table text-center">
-        <div class="act-table-cell ver-middle" id="varna_page">
+        <div class="act-table-cell ver-middle">
+          <div class="jumbotron" id="varna_jumbotron">
+          </div>
+          <main class="main">
+            <div class="container">
+              <div class="row" id="varna_row">
+              </div>
+            </div>
+          </main>
           <main-footer></main-footer>
         </div>
       </div>
@@ -99,10 +114,17 @@
     <!--Contact-->
     <section class="page face right" id="alphabet">
       <div class="act-table text-center">
-        <div class="act-table-cell-ver-middle" id="alphabet_page">
-          <main-footer></main-footer>
+        <div class="act-table-cell-ver-middle">
+          <div class="jumbotron" id="alphabet_jumbotron">
+          </div>
+          <main class="main">
+            <div class="container">
+              <div class="row" id="alphabet_row"></div>
+            </div>
+          </main>
         </div>
       </div>
+      <main-footer></main-footer>
     </section>
     <section class="page face bottom" id="blog">
       <div class="act-table text-center">
