--- a/public/index.html
+++ b/public/index.html
@@ -66,50 +66,47 @@
     <!--Article-->
     <section class="page active face front" id="ancient_tooth">
       <div class="act-table text-center">
-        <div class="act-table-cell ver-middle">
+        <div class="act-table-cell-ver-middle">
           <div class="jumbotron" id="ancient_tooth_jumbotron">
           </div>
           <main class="main">
             <div class="container">
-              <div class="row" id="ancient_tooth_row">
-              </div>
+              <div class="row" id="ancient_tooth_row"></div>
             </div>
           </main>
-          <main-footer></main-footer>
         </div>
       </div>
+      <main-footer></main-footer>
     </section>
     <!--Article-->
     <section class="page face back" id="caves">
       <div class="act-table text-center">
-        <div class="act-table-cell ver-middle">
+        <div class="act-table-cell-ver-middle">
           <div class="jumbotron" id="caves_jumbotron">
-        </div>
-        <main class="main">
-          <div class="container">
-            <div class="row" id="caves_row">
-            </div>
           </div>
-        </main>
+          <main class="main">
+            <div class="container">
+              <div class="row" id="caves_row"></div>
+            </div>
+          </main>
+        </div>
+      </div>
       <main-footer></main-footer>
-    </div>
-  </div>
     </section>
     
     <section class="page face top" id="varna">
       <div class="act-table text-center">
-        <div class="act-table-cell ver-middle">
+        <div class="act-table-cell-ver-middle">
           <div class="jumbotron" id="varna_jumbotron">
           </div>
           <main class="main">
             <div class="container">
-              <div class="row" id="varna_row">
-              </div>
+              <div class="row" id="varna_row"></div>
             </div>
           </main>
-          <main-footer></main-footer>
         </div>
       </div>
+      <main-footer></main-footer>
     </section>
     <!--Contact-->
     <section class="page face right" id="alphabet">
