--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,6 @@
     <!--Article-->
     <section class="page active face front" id="ancient_tooth">
       <div class="act-table text-center">
-<<<<<<< HEAD
         <div class="act-table-cell-ver-middle">
           <div class="jumbotron" id="ancient_tooth_jumbotron">
           </div>
@@ -75,16 +74,6 @@
               <div class="row" id="ancient_tooth_row"></div>
             </div>
           </main>
-=======
-        <div class="act-table-cell ver-middle" id="ancient_tooth_page">
-          <div class="figure_div">
-            <figure>
-                <img src="https://assets.codepen.io/1480814/necro.png" alt="Necromancer">
-                <figcaption>The Necro</figcaption>
-            </figure>
-            </div>
-          <main-footer></main-footer>
->>>>>>> parent of 5c26bcb (commit)
         </div>
       </div>
       <main-footer></main-footer>
@@ -92,7 +81,6 @@
     <!--Article-->
     <section class="page face back" id="caves">
       <div class="act-table text-center">
-<<<<<<< HEAD
         <div class="act-table-cell-ver-middle">
           <div class="jumbotron" id="caves_jumbotron">
           </div>
@@ -102,18 +90,12 @@
             </div>
           </main>
         </div>
-=======
-        <div class="act-table-cell ver-middle" id="caves_page">
-          
-        <div class="first-images">
->>>>>>> parent of 5c26bcb (commit)
       </div>
       <main-footer></main-footer>
     </section>
     
     <section class="page face top" id="varna">
       <div class="act-table text-center">
-<<<<<<< HEAD
         <div class="act-table-cell-ver-middle">
           <div class="jumbotron" id="varna_jumbotron">
           </div>
@@ -122,10 +104,6 @@
               <div class="row" id="varna_row"></div>
             </div>
           </main>
-=======
-        <div class="act-table-cell ver-middle" id="varna_page">
-          <main-footer></main-footer>
->>>>>>> parent of 5c26bcb (commit)
         </div>
       </div>
       <main-footer></main-footer>
@@ -133,10 +111,17 @@
     <!--Contact-->
     <section class="page face right" id="alphabet">
       <div class="act-table text-center">
-        <div class="act-table-cell-ver-middle" id="alphabet_page">
-          <main-footer></main-footer>
+        <div class="act-table-cell-ver-middle">
+          <div class="jumbotron" id="alphabet_jumbotron">
+          </div>
+          <main class="main">
+            <div class="container">
+              <div class="row" id="alphabet_row"></div>
+            </div>
+          </main>
         </div>
       </div>
+      <main-footer></main-footer>
     </section>
     <section class="page face bottom" id="blog">
       <div class="act-table text-center">
