maps added in peshteri

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
       <li class="pull-left active"><a href="#" id="ancient_tooth_anchor" data-direction="front">Home</a></li>
       <li class="pull-left"><a href="#" id="caves_anchor"  data-direction="back">Пещерите</a></li>
       <li class="pull-left"><a href="#" id="varna_anchor" data-direction="top">Варна</a></li>
-      <li class="pull-left"><a href="#" id="alphabet_anchor" data-direction="right">Писмеността</a></li>
+      <li class="pull-left"><a href="#" id="alphabet_anchor" data-direction="right">Писменост</a></li>
       <div class="clearfix"></div>
     </ul>
   </nav>
