Fix some bugs and add information

--- a/public/contact.html
+++ b/public/contact.html
@@ -44,11 +44,12 @@
 
 <div class="contact-form">
 
-    <div class="contact-info">
+    <div class="contact-info" style="margin: 1cm;padding-top: 1cm;">
         <h2>Свържете се с нас</h2>
-        <p style="margin-top: 0.9cm;">Имате въпроси? Не се притеснявайте! Свържете се с нас посредством вашия имейл.</p>
-    </div>
+        <p style="margin-top: 0.2cm;">Имате въпроси? Не се притеснявайте! Свържете се с нас посредством вашия имейл.</p>
+    
     <small>Въведете съобщение и натиснете бутона "Изпрати".</small>
+    </div>
     <div class="contact-section">
         <div class="wrapper centered">
             <article class="letter">
