--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 <header>
   <nav class="text-center" id="index_navigation">
     <ul class="inline-block">
-      <li class="pull-left active"><a href="#" id="ancient_tooth_anchor" data-direction="front">Home</a></li>
+      <li class="pull-left active"><a href="#" id="ancient_tooth_anchor" data-direction="front">Праистория</a></li>
       <li class="pull-left"><a href="#" id="caves_anchor"  data-direction="back">Пещерите</a></li>
       <li class="pull-left"><a href="#" id="varna_anchor" data-direction="top">Варна</a></li>
       <li class="pull-left"><a href="#" id="alphabet_anchor" data-direction="right">Писменост</a></li>
@@ -69,7 +69,9 @@
     <section class="page active face front" id="ancient_tooth">
       <div class="act-table text-center">
         <div class="act-table-cell-ver-middle">
-          <div class="jumbotron" id="ancient_tooth_jumbotron">
+          <div class="jumbotron" id="ancient_tooth_jumbotron"  style="background:url(/public/assets/purvi_chovek.jpg) center center no-repeat;
+          background-size: cover;
+          margin-bottom: 0;">
           </div>
           <main class="main">
             <div class="container">
