--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
     <section class="page active face front" id="ancient_tooth">
       <div class="act-table text-center">
         <div class="act-table-cell-ver-middle">
-          <div class="jumbotron" id="ancient_tooth_jumbotron"  style="background:url(/public/assets/purvi_chovek.jpg) center center no-repeat;
+          <div class="jumbotron" id="ancient_tooth_jumbotron"  style="background:url(./assets/purvi_chovek.jpg) center center no-repeat;
           background-size: cover;
           margin-bottom: 0;">
           </div>
@@ -92,7 +92,7 @@
     <section class="page face back" id="caves">
       <div class="act-table text-center">
         <div class="act-table-cell-ver-middle">
-          <div class="jumbotron" id="caves_jumbotron" style="background:url(/public/assets/magura.jpg) center center no-repeat;
+          <div class="jumbotron" id="caves_jumbotron" style="background:url(./assets/magura.jpg) center center no-repeat;
           background-size: cover;
           margin-bottom: 0;">
           </div>
@@ -110,7 +110,7 @@
       <div class="act-table text-center">
         <div class="act-table-cell-ver-middle">
           
-          <div class="jumbotron" id="varna_jumbotron" style="background:url(/public/assets/varna_nekropol.jpg) center center no-repeat;
+          <div class="jumbotron" id="varna_jumbotron" style="background:url(./assets/varna_nekropol.jpg) center center no-repeat;
           background-size: cover;
           margin-bottom: 0;">
           </div>
@@ -129,7 +129,7 @@
     <section class="page face right" id="alphabet">
       <div class="act-table text-center">
         <div class="act-table-cell-ver-middle">
-          <div class="jumbotron" id="alphabet_jumbotron" style="background:url(/public/assets/gradeshnica.jpg) center center no-repeat;
+          <div class="jumbotron" id="alphabet_jumbotron" style="background:url(./assets/gradeshnica.jpg) center center no-repeat;
           background-size: cover;
           margin-bottom: 0;">
           </div>
