--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,10 @@
       After you sign up, use the following script tag with YOUR_GOOGLE_API_KEY replaced with your actual key.
           <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY"></script>
   -->
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBursgXxB9JfuHfmr2nRITHfOPiFmQYq80&callback=initMap"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBursgXxB9JfuHfmr2nRITHfOPiFmQYq80"></script>
   
   <script type="text/javascript">
+      google.maps.event.addDomListener(window, 'load', initMap());
       function initMap() {
           var mapOptions = {
               zoom: 11,
