--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
   <nav class="text-center" id="index_navigation">
     <ul class="inline-block">
       <li class="pull-left active"><a href="#" id="ancient_tooth_anchor" data-direction="front">Праистория</a></li>
-      <li class="pull-left"><a href="#" id="caves_anchor"  data-direction="back">Пещерите</a></li>
+      <li class="pull-left"><a href="#" id="caves_anchor" data-target="caves"  data-direction="back">Пещерите</a></li>
       <li class="pull-left"><a href="#" id="varna_anchor" data-direction="top">Варна</a></li>
       <li class="pull-left"><a href="#" id="alphabet_anchor" data-direction="right">Писменост</a></li>
       <div class="clearfix"></div>
