--- a/public/index.html
+++ b/public/index.html
@@ -76,12 +76,12 @@
           <main class="main">
             <div class="container">
               <div class="row" id="ancient_tooth_row"></div>
-              <div class="figure_div">
+              <!-- <div class="figure_div">
                 <figure>
                     <img src="./assets/varnaman.png"  alt="Necromancer">
                     <figcaption>The Necro</figcaption>
-                </figure>
-                </div>
+                </figure> 
+                </div> -->
             </div>
           </main>
         </div>
@@ -155,7 +155,25 @@
   </div>
 </div>
 <!-- partial -->
+<!-- <section class="page face top wrap" id="varna_dublicate">
+  <div class="act-table text-center">
+    <div class="act-table-cell-ver-middle">
+      
+      <div class="jumbotron" id="varna_dublicate_jumbotron" style="background:url(./assets/varna_nekropol.jpg) center center no-repeat;
+      background-size: cover;
+      margin-bottom: 0;">
+      </div>
+      <main class="main">
+        <div class="container">
+          <div class="row" id="varna_dublicate_row">
+          </div>
 
+        </div>
+      </main>
+    </div>
+  </div>
+  <main-footer></main-footer>
+</section> -->
 <script src="integration.js"></script>
 <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
 <script src="footer.js"></script>
