--- a/public/index.html
+++ b/public/index.html
@@ -155,12 +155,12 @@
   </div>
 </div>
 <!-- partial -->
-<<<<<<< HEAD
 <script>function showCurrentPageIframe() {
   var currentPage = window.location.href;
   var iframes = document.querySelectorAll('.iframe-container');
   iframes.forEach(function(iframe) {
       iframe.style.display = 'none';
+      iframe.src = `https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11764.221152733466!2d25.903374762895577!3d42.51163303886372!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40a87cc7993602db%3A0xa00a014cd0e6020!2zODkzNCDQmtCw0YDQsNC90L7QstC-!5e0!3m2!1sbg!2sbg!4v1715108044285!5m2!1sbg!2sbg`;
   });
 
   // Show the iframe corresponding to the current page
@@ -184,27 +184,6 @@ window.addEventListener('load', function() {
 function navigateBack() {
   showCurrentPageIframe();
 }</script>
-=======
-<!-- <section class="page face top wrap" id="varna_dublicate">
-  <div class="act-table text-center">
-    <div class="act-table-cell-ver-middle">
-      
-      <div class="jumbotron" id="varna_dublicate_jumbotron" style="background:url(./assets/varna_nekropol.jpg) center center no-repeat;
-      background-size: cover;
-      margin-bottom: 0;">
-      </div>
-      <main class="main">
-        <div class="container">
-          <div class="row" id="varna_dublicate_row">
-          </div>
-
-        </div>
-      </main>
-    </div>
-  </div>
-  <main-footer></main-footer>
-</section> -->
->>>>>>> f1dc6f3d5c4d34a82d5b036928777852b7ac3c88
 <script src="integration.js"></script>
 <script async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
 <script src="footer.js"></script>
