--- a/public/index.html
+++ b/public/index.html
@@ -76,12 +76,12 @@
           <main class="main">
             <div class="container">
               <div class="row" id="ancient_tooth_row"></div>
-              <div class="figure_div">
+              <!---<div class="figure_div">
                 <figure>
                     <img src="./assets/varnaman.png"  alt="Necromancer">
                     <figcaption>The Necro</figcaption>
                 </figure>
-                </div>
+                </div>--->
             </div>
           </main>
         </div>
