--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -64,7 +64,7 @@
           <div class="social-icons" style="text-align: center;">
             <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
         </div>
         </div>
       </div>
