--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -62,13 +62,12 @@
           <div class="profile-name">Евгени Генчев</div>
           <div class="profile-job">Software Engineer</div>
           <div class="social-icons" style="text-align: center;">
-            <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            <a target="_blank" href="https://discordapp.com/users/625758925643317248" class="social-icon"><i class="fab fa-discord"></i></a>
+            <a target="_blank" href="https://github.com/EvgeniGenchev07" class="social-icon"><i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://www.instagram.com/e._.genchev?igsh=YWl1d25kY3Ruazdv&utm_source=qr" class="social-icon"><i class="fab fa-instagram"></i></a>
         </div>
         </div>
       </div>
-    </div>  
     <script class="bot" async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
             <main-footer style="position: fixed;left: 0;
             bottom: 0;
