--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -61,11 +61,13 @@
           <img class="profile-picture" src="profile2.jpg" alt="Profile Picture">
           <div class="profile-name">Евгени Генчев</div>
           <div class="profile-job">Software Engineer</div>
-          <a target="_blank" href="https://discordapp.com/users/625758925643317248" class="social-icon"><i class="fab fa-discord"></i></a>
+          <div class="social-icons" style="text-align: center;">
+            <a target="_blank" href="https://discordapp.com/users/625758925643317248" class="social-icon"><i class="fab fa-discord"></i></a>
             <a target="_blank" href="https://github.com/EvgeniGenchev07" class="social-icon"><i class="fab fa-github"></i></a>
             <a target="_blank" href="https://www.instagram.com/e._.genchev?igsh=YWl1d25kY3Ruazdv&utm_source=qr" class="social-icon"><i class="fab fa-instagram"></i></a>
-        </div>
+          </div>
       </div>
+    </div>
     <script class="bot" async data-id="8674298786" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
             <main-footer style="position: fixed;left: 0;
             bottom: 0;
