social media link

--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -51,9 +51,9 @@
           <div class="profile-name">Иван Ташев</div>
           <div class="profile-job">Software Engineer</div>
           <div class="social-icons" style="text-align: center;">
-            <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-stack-overflow"></i></a>
+            <a target="_blank" href="https://discordapp.com/users/1174739688695799974" class="social-icon"><i class="fab fa-discord"></i></a>
+            <a target="_blank" href="https://github.com/Ivan21T" class="social-icon"><i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://www.reddit.com/user/ITT21/" class="social-icon"><i class="fab fa-reddit"></i></a>
         </div>
       </div>
         
