Profile picture update

--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -47,7 +47,7 @@
       
       <div class="profile-container">
       <div class="profile-card">
-          <img class="profile-picture" src="profile1.jpg" alt="Profile Picture">
+          <img class="profile-picture" src="./assets/profile.png" alt="Profile Picture">
           <div class="profile-name">Иван Ташев</div>
           <div class="profile-job">Software Engineer</div>
           <div class="social-icons" style="text-align: center;">
@@ -58,7 +58,7 @@
       </div>
         
         <div class="profile-card">
-          <img class="profile-picture" src="profile2.jpg" alt="Profile Picture">
+          <img class="profile-picture" src="./assets/profile.png" alt="Profile Picture">
           <div class="profile-name">Евгени Генчев</div>
           <div class="profile-job">Software Engineer</div>
           <div class="social-icons" style="text-align: center;">
