--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -49,7 +49,7 @@
       <div class="profile-card">
           <img class="profile-picture" src="./assets/profile.png" alt="Profile Picture">
           <div class="profile-name">Иван Ташев</div>
-          <div class="profile-job">Software Engineer</div>
+          <div class="profile-job"></div>
           <div class="social-icons" style="text-align: center;">
             <a target="_blank" href="https://discordapp.com/users/1174739688695799974" class="social-icon"><i class="fab fa-discord"></i></a>
             <a target="_blank" href="https://github.com/Ivan21T" class="social-icon"><i class="fab fa-github"></i></a>
@@ -60,7 +60,7 @@
         <div class="profile-card">
           <img class="profile-picture" src="./assets/profile.png" alt="Profile Picture">
           <div class="profile-name">Евгени Генчев</div>
-          <div class="profile-job">Software Engineer</div>
+          <div class="profile-job"></div>
           <div class="social-icons" style="text-align: center;">
             <a target="_blank" href="https://discordapp.com/users/625758925643317248" class="social-icon"><i class="fab fa-discord"></i></a>
             <a target="_blank" href="https://github.com/EvgeniGenchev07" class="social-icon"><i class="fab fa-github"></i></a>
