--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
       </ul>
 </nav>
 </div>
+<div id="message">
 <header>
   <nav class="text-center" id="index_navigation">
     <ul class="inline-block">
@@ -154,7 +155,7 @@
     </section>
   </div>
 </div>
-<div id="message"></div>
+</div>
 <!-- partial -->
 <script>
         function isAndroidOrIOS() {
