--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@
         window.onload = function() {
             var messageElement = document.getElementById('message');
             if (isAndroidOrIOS()) {
-                messageElement.textContent = 'Страницата е в процес на разработване!Отворете сайта на компютър.Благодарим за разбирането!';
+                messageElement.textContent = 'Страницата е в процес на разработка!Отворете сайта на компютър.Благодарим за разбирането!';
             }
         }
 </script>
