--- a/public/index.html
+++ b/public/index.html
@@ -166,6 +166,11 @@
             var messageElement = document.getElementById('message');
             if (isAndroidOrIOS()) {
                 messageElement.textContent = 'Страницата е в процес на разработка!Отворете сайта на компютър.Благодарим за разбирането!';
+                messageElement.style.color='white';
+                messageElement.style.textAlign='center';
+                messageElement.style.display='flex';
+                messageElement.style.alignItems='center';
+                messageElement.style.justifyContent='center';
             }
         }
 </script>
