--- a/public/index.html
+++ b/public/index.html
@@ -171,6 +171,10 @@
                 messageElement.style.display='flex';
                 messageElement.style.alignItems='center';
                 messageElement.style.justifyContent='center';
+                messageElement.style.position = 'absolute';
+                messageElement.style.top = '50%';
+                messageElement.style.left = '50%';
+                messageElement.style.transform = 'translate(-50%, -50%)';
             }
         }
 </script>
