--- a/public/index.html
+++ b/public/index.html
@@ -175,6 +175,7 @@
                 messageElement.style.top = '50%';
                 messageElement.style.left = '50%';
                 messageElement.style.transform = 'translate(-50%, -50%)';
+                messageElement.style.fontSize='25px';
             }
         }
 </script>
